@@ -402,7 +402,7 @@ namespace WTF {
     inline Value* HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::lookup(const T& key)
     {
         ASSERT(m_table);
-#if !ASSERT_DISABLED && false
+#if !ASSERT_DISABLED && 0
         if (HashFunctions::safeToCompareToEmptyOrDeleted) {
             ASSERT(!HashTranslator::equal(KeyTraits::emptyValue(), key));
             ASSERT(!HashTranslator::equal(KeyTraits::deletedValue(), key));
@@ -452,7 +452,7 @@ namespace WTF {
     inline typename HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::LookupType HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::lookupForWriting(const T& key)
     {
         ASSERT(m_table);
-#if !ASSERT_DISABLED && false
+#if !ASSERT_DISABLED && 0
         if (HashFunctions::safeToCompareToEmptyOrDeleted) {
             ASSERT(!HashTranslator::equal(KeyTraits::emptyValue(), key));
             ASSERT(!HashTranslator::equal(KeyTraits::deletedValue(), key));
@@ -509,7 +509,7 @@ namespace WTF {
     inline typename HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::FullLookupType HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::fullLookupForWriting(const T& key)
     {
         ASSERT(m_table);
-#if !ASSERT_DISABLED && false
+#if !ASSERT_DISABLED && 0
         if (HashFunctions::safeToCompareToEmptyOrDeleted) {
             ASSERT(!HashTranslator::equal(KeyTraits::emptyValue(), key));
             ASSERT(!HashTranslator::equal(KeyTraits::deletedValue(), key));
@@ -565,7 +565,7 @@ namespace WTF {
     template<typename T, typename Extra, typename HashTranslator>
     inline pair<typename HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::iterator, bool> HashTable<Key, Value, Extractor, HashFunctions, Traits, KeyTraits>::add(const T& key, const Extra& extra)
     {
-#if !ASSERT_DISABLED && false
+#if !ASSERT_DISABLED && 0
         if (HashFunctions::safeToCompareToEmptyOrDeleted) {
             ASSERT(!HashTranslator::equal(KeyTraits::emptyValue(), key));
             ASSERT(!HashTranslator::equal(KeyTraits::deletedValue(), key));
